infra/forgejo/forgejo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forgejo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: forgejo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: forgejo
    spec:
      containers:
        - name: forgejo
          image: codeberg.org/forgejo/forgejo:14-rootless
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: data
              mountPath: /var/lib/gitea
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: forgejo-pvc
