infra/forgejo/forgejo-runner-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forgejo-runner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: forgejo-runner
  template:
    metadata:
      labels:
        app: forgejo-runner
    spec:
      containers:
        - name: runner
          image: code.forgejo.org/forgejo/runner:6.3.1
          command: ["forgejo-runner", "daemon"]
          volumeMounts:
            - name: docker-certs
              mountPath: /certs/client
            - name: runner-data
              mountPath: /data
        - name: dind
          image: docker:dind
          securityContext:
            privileged: true
          volumeMounts:
            - name: docker-certs
              mountPath: /certs
            - name: runner-data
              mountPath: /data
      volumes:
        - name: docker-certs
          emptDir: {}
        - name: runner-data
          persistentVolumeClaim:
            claimName: forgejo-runner-pvc
