infra/forgejo/forgejo-ssh-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo
  annotations:
    metallb.universe.tf/allow-shared-ip: "homelab"
spec:
  selector:
    app: forgejo
  ports:
    - port: 2222
      targetPort: 2222
  type: LoadBalancer
