infra/forgejo/forgejo-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo
  namespace: default
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: default
  hostnames:
  - "git.home.williamlhunter.com"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
      - name: forgejo-http
        port: 3000
